markup for pages except loader, bookingForm and filters, redux for carsSlice

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;&family=Manrope:wght@400;500;600;"
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz@0,14..32;1,14..32&family=Manrope:wght@200..800&display=swap"
       rel="stylesheet"
     />
   </head>
